feat: Add Telegram Web App integration with Open button support
- Updated env.example with Telegram bot configuration
- Added comprehensive README with Web App setup instructions
- Included Telegram bot token and Web App URL settings
- Added step-by-step guide for BotFather configuration
- Updated documentation for 2FA generator with Telegram integration

--- a/env.example
+++ b/env.example
@@ -1,6 +1,10 @@
 # Пример файла переменных окружения для 2FA веб-приложения
 # Скопируйте этот файл в .env и настройте под свои нужды
 
+# Настройки Telegram бота
+TELEGRAM_BOT_TOKEN=your_bot_token_here
+WEB_APP_URL=https://your-app-name.onrender.com
+
 # Основные настройки
 FLASK_ENV=production
 SECRET_KEY=your-super-secret-key-change-this-in-production
@@ -12,7 +16,7 @@ SESSION_COOKIE_HTTPONLY=true
 SESSION_COOKIE_SAMESITE=Strict
 
 # CORS настройки (разделите домены запятыми)
-CORS_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
+CORS_ORIGINS=https://your-app-name.onrender.com
 
 # Настройки Gunicorn
 WEB_CONCURRENCY=4
